--- a/apps/drec-angular-ui/src/app/app.component.html
+++ b/apps/drec-angular-ui/src/app/app.component.html
@@ -1,103 +1,2 @@
-<ng-container >
-    <mat-toolbar class="example-header">
-      <button mat-button (click)="sidenav.toggle()"> <mat-icon>
-          menu
-        </mat-icon></button>
-      Header</mat-toolbar>
-  
-    <mat-sidenav-container class="example-container">
-      <mat-sidenav #sidenav mode="side" opened class="example-sidenav">
-        <!-- {{options.value.fixed ? 'Fixed' : 'Non-fixed'}} Sidenav -->
-  
-        <button mat-button class="menu-button">
-          <mat-icon>home</mat-icon>
-          <span>Home</span>
-        </button>
-        <button mat-button class="menu-button">
-          <mat-icon>person</mat-icon>
-          <span>Profile</span>
-        </button>
-        <button mat-button class="menu-button">
-          <mat-icon>info</mat-icon>
-          <span>About</span>
-        </button>
-  
-        <mat-divider></mat-divider>
-  
-        <button mat-button class="menu-button">
-          <mat-icon>help</mat-icon>
-          <span>Help</span>
-        </button>
-      </mat-sidenav>
-  
-      <mat-sidenav-content [formGroup]="options">
-        <!-- <p><mat-checkbox formControlName="fixed">Fixed</mat-checkbox></p>
-        <p><mat-form-field appearance="fill">
-          <mat-label>Top gap</mat-label>
-          <input matInput type="number" formControlName="top">
-        </mat-form-field></p>
-        <p><mat-form-field appearance="fill">
-          <mat-label>Bottom gap</mat-label>
-          <input matInput type="number" formControlName="bottom">
-        </mat-form-field></p>
-        <p> -->
-  
-        <div class="content mat-elevation-z8">
-          <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  
-            <!-- Checkbox Column -->
-            <ng-container matColumnDef="select">
-              <th mat-header-cell *matHeaderCellDef>
-                <mat-checkbox (change)="$event ? masterToggle() : null"
-                  [checked]="selection.hasValue() && isAllSelected()"
-                  [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
-                </mat-checkbox>
-              </th>
-              <td mat-cell *matCellDef="let row">
-                <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
-                  [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
-                </mat-checkbox>
-              </td>
-            </ng-container>
-  
-            <!-- Position Column -->
-            <ng-container matColumnDef="position">
-              <th mat-header-cell *matHeaderCellDef> No. </th>
-              <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-            </ng-container>
-  
-            <!-- Name Column -->
-            <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef> Name </th>
-              <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-            </ng-container>
-  
-            <!-- Weight Column -->
-            <ng-container matColumnDef="weight">
-              <th mat-header-cell *matHeaderCellDef> Weight </th>
-              <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
-            </ng-container>
-  
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="symbol">
-              <th mat-header-cell *matHeaderCellDef> Symbol </th>
-              <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-            </ng-container>
-  
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)">
-            </tr>
-          </table>
-        </div>
-      </mat-sidenav-content>
-    </mat-sidenav-container>
-  
-    <mat-toolbar class="example-footer">Footer</mat-toolbar>
-  </ng-container>
-  
-  
-  
-  
-  <!-- Copyright 2022 Google LLC. All Rights Reserved.
-      Use of this source code is governed by an MIT-style license that
-      can be found in the LICENSE file at https://angular.io/license -->
+
+<router-outlet></router-outlet>
