--- a/apps/drec-angular-ui/src/app/app.component.scss
+++ b/apps/drec-angular-ui/src/app/app.component.scss
@@ -6,61 +6,61 @@
   right: 0;
 }
 
-.example-sidenav {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 200px;
-  background: rgba(153, 144, 192, 0.5);
-}
+// .example-sidenav {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   width: 200px;
+//   background: rgba(153, 144, 192, 0.5);
+// }
 
-.example-header {
-  position: fixed;
-  background: #004a9f;
-  color: white;
-  top: 0;
-  left: 0;
-  right: 0;
-}
-.menu-button {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  font-size: 1rem;
+// .example-header {
+//   position: fixed;
+//   background: #004a9f;
+//   color: white;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+// }
+// .menu-button {
+//   width: 100%;
+//   display: flex;
+//   align-items: center;
+//   justify-content: flex-start;
+//   font-size: 1rem;
 
-  mat-icon {
-      margin-right: 8px;
-  }
-}
-.avatar {
-  margin-top: 16px;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-}
+//   mat-icon {
+//       margin-right: 8px;
+//   }
+// }
+// .avatar {
+//   margin-top: 16px;
+//   width: 100px;
+//   height: 100px;
+//   border-radius: 50%;
+// }
 
-.name {
-  margin-top: 8px;
-  font-weight: normal;
-}
+// .name {
+//   margin-top: 8px;
+//   font-weight: normal;
+// }
 
-.designation {
-  margin-top: 2px;
-  font-size: 0.7rem;
-  color: lightgrey;
-}
+// .designation {
+//   margin-top: 2px;
+//   font-size: 0.7rem;
+//   color: lightgrey;
+// }
 
-mat-divider {
-  margin-top: 16px;
-  margin-bottom: 16px;
-  background-color: rgba(255, 255, 255, 0.5);
-}
-.example-footer {
-  position: fixed;
-  background: #004a9f;
-  color: white;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
+// mat-divider {
+//   margin-top: 16px;
+//   margin-bottom: 16px;
+//   background-color: rgba(255, 255, 255, 0.5);
+// }
+// .example-footer {
+//   position: fixed;
+//   background: #004a9f;
+//   color: white;
+//   bottom: 0;
+//   left: 0;
+//   right: 0;
+// }
