--- a/apps/drec-angular-ui/src/app/view/login/login.component.scss
+++ b/apps/drec-angular-ui/src/app/view/login/login.component.scss
@@ -1,70 +1,127 @@
-:host {
-    display: flex;
-    justify-content: center;
-    margin: 100px 0px;
-   
-  }
-  .mat-card {
-    width: 500px;
-    min-width: 500px;
-  }
- 
-  .mat-card {
-    max-width: 400px;
-    margin: 2em auto;
-    text-align: center;
-  }
-  .mat-form-field {
-    width: 100%;
-    min-width: 500px;
-  }
-  // .mat-form-field {
-  //   display: block;
-  // }
-  .mat-card-title
- .mat-card-content {
-    display: flex;
-    justify-content: center;
+// :host {
+//     display: flex;
+//     justify-content: center;
+//     margin: 100px 0px;
+
+//   }
+.mat-card {
+  width: 500px;
+  min-width: 500px;
+}
+
+.mat-card {
+  max-width: 400px;
+  margin: 2em auto;
+  text-align: center;
+}
+
+.mat-form-field {
+  width: 100%;
+  min-width: 500px;
+}
+
+// .mat-form-field {
+//   display: block;
+// }
+.mat-card-title .mat-card-content {
+  display: flex;
+  justify-content: center;
+}
+
+.error {
+  padding: 16px;
+  width: 500px;
+  color: white;
+  background-color: red;
+}
+
+.button {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.login-wrapper .example-form {
+  min-width: 100%;
+  max-width: 400px;
+  width: 100%;
+}
+
+.login-wrapper .example-full-width,
+.login-wrapper .btn-block {
+  width: 100%;
+}
+
+.login-wrapper mat-card-header {
+  text-align: center;
+  width: 100%;
+  display: block;
+  font-weight: 700;
+}
+
+.login-wrapper mat-card-header mat-card-title {
+  font-size: 30px;
+  margin: 0;
+}
+
+.login-wrapper .mat-card {
+  padding: 40px 70px 50px;
+}
+
+.login-wrapper .mat-stroked-button {
+  border: 1px solid currentColor;
+  line-height: 54px;
+  background: #FFF7FA;
+}
+
+.login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
+  padding: 0.8375em 0;
+}
+
+
+
+// Body Background 
+::ng-deep body {
+  height: 100vh;
+  background: rgb(254, 240, 73);
+  background: -moz-linear-gradient(144deg, rgba(254, 240, 73, 1) 0%, rgba(242, 196, 26, 1) 48%);
+  background: -webkit-linear-gradient(144deg, rgba(254, 240, 73, 1) 0%, rgba(242, 196, 26, 1) 48%);
+  background: linear-gradient(144deg, rgba(254, 240, 73, 1) 0%, rgba(242, 196, 26, 1) 48%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#fef049", endColorstr="#f2c41a", GradientType=1);
+  overflow: hidden;
+}
+
+.h-100vh {
+  height: 100vh;
+}
+
+.drec-login {
+
+  .mat-mdc-card {
+    border-radius: 10px !important;
+    box-shadow: 0 6px 15px  rgba(0,0,0,0.1);;
   }
 
-  .error {
-    padding: 16px;
-    width: 500px;
-    color: white;
-    background-color: red;
-  }
+  .form-content input, .form-content .dropdown-toggle.btn-default {
+    width: 100%;
+    padding: 9px 20px;
+    text-align: left;
+    border: 0;
+    outline: 0;
+    border-radius: 6px;
+    background-color: #fff;
+    font-size: 15px;
+    font-weight: 300;
+    color: #8D8D8D;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+    margin-bottom: 14px;
+}
 
-  .button {
-    display: flex;
-    justify-content: flex-end;
-  }
-  .login-wrapper .example-form {
-    min-width: 100%;
-    max-width: 300px;
-    width: 100%;
-  }
-  .login-wrapper .example-full-width,
-  .login-wrapper .btn-block {
-    width: 100%;
-  }
-  .login-wrapper mat-card-header {
-    text-align: center;
-    width: 100%;
-    display: block;
-    font-weight: 700;
-  }
-  .login-wrapper mat-card-header mat-card-title {
-    font-size: 30px;
-    margin: 0;
-  }
-  .login-wrapper .mat-card {
-    padding: 40px 70px 50px;
-  }
-  .login-wrapper .mat-stroked-button {
-    border: 1px solid currentColor;
-    line-height: 54px;
-    background: #FFF7FA;
-  }
-  .login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
-    padding: 0.8375em 0;
-  }
+.form-content input:hover, .form-content input:focus, .form-content .dropdown-toggle.btn-default:hover, .form-content .dropdown-toggle.btn-default:focus {
+    border: 0;
+    background-color: #ebeff8;
+    color: #8D8D8D;
+}
+
+
+}
