--- a/apps/drec-angular-ui/src/styles.scss
+++ b/apps/drec-angular-ui/src/styles.scss
@@ -1,5 +1,83 @@
 /* You can add global styles to this file, and also import other style files */
-@import Url("https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css");
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-// html, body { height: 100%; }
+ html, body, .mat-mdc-card-title, .mdc-button, h1,h2,h3,h4,h5, h6, p { 
+  font-family: 'Montserrat', sans-serif!important;
+}
+
+// Variables
+// Colors
+$primary: #f2be1a;
+$secondary: #010101;
+$tritary: #3f3f3f;
+$gray: #3f3f3f;
+$white: #fff;
+$danger: #f44336;
+
+
+// Fonts
+$f-14:14px;
+$f-16:16px;
+
+html, body
+{
+    height: 100%;
+}
 // body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.drec-login 
+{
+.mdc-text-field--filled:not(.mdc-text-field--disabled)
+{
+  background-color: #F7F7F7!important;
+  border-radius: 6px!important;
+}
+}
+
+
+
+// Colors 
+
+.btn-primary
+{
+background-color: $primary;
+border: 1px solid $primary;
+color: $gray;
+font-weight: 600;
+&:hover, &:active, &:link, &:focus
+{
+    box-shadow: 0px 3px 5px rgba(0,0,0,0.1);
+    background-color: $primary;
+    border: 1px solid $primary;
+    color: $gray;
+}
+}
+.btn-check:checked + .btn, :not(.btn-check) + .btn:active, .btn:first-child:active, .btn.active, .btn.show, .btn:disabled, .btn.disabled, fieldset:disabled .btn
+{
+    @extend .btn-primary
+}
+
+
+// Mat Input
+.mdc-text-field--no-label:not(.mdc-text-field--textarea) .mat-mdc-form-field-input-control.mdc-text-field__input, .mat-mdc-text-field-wrapper .mat-mdc-form-field-input-control, .mat-mdc-form-field-icon-prefix, [dir=rtl] .mat-mdc-form-field-icon-suffix
+{
+    font-size: $f-14;
+    top: -5px;
+    position: relative;
+}
+
+.mdc-text-field--filled:not(.mdc-text-field--disabled):hover .mdc-line-ripple::before, .mdc-text-field--filled .mdc-line-ripple::after
+{
+    border-bottom-color:$primary!important;
+    border-radius: 6px!important;;
+}
+.mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-line-ripple::before
+{
+    border-bottom-color:$gray!important;
+    border-radius: 6px!important;;
+}
+.mdc-text-field--filled {
+    height: 45px!important;
+}
+.mdc-text-field--invalid:not(.mdc-text-field--disabled) .mdc-line-ripple::after
+{
+    border-bottom-color:$danger!important;
+}
