--- a/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
+++ b/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
@@ -6,7 +6,7 @@
         <mat-icon>list</mat-icon>
       <span>All Devices</span>
     </button>
-    <button mat-button class="menu-button" routerLink="/myreservation">
+    <button mat-button class="menu-button active" routerLink="/myreservation">
       <mat-icon>list</mat-icon>
     <span>My Reservation</span>
   </button>
