--- a/apps/drec-angular-ui/src/app/view/register/register.component.html
+++ b/apps/drec-angular-ui/src/app/view/register/register.component.html
@@ -1,3 +1,7 @@
+<div class="bg-solar">
+    
+</div>
+
 <div
     class="login-wrapper d-flex align-self-center align-items-center flex-column h-100vh justify-content-center drec-login">
 
