--- a/apps/drec-angular-ui/src/app/nav/withoutloginlayout/withoutloginlayout.component.html
+++ b/apps/drec-angular-ui/src/app/nav/withoutloginlayout/withoutloginlayout.component.html
@@ -1,6 +1,6 @@
 
 <ng-container>
-  <app-header></app-header>
+  <!-- <app-header></app-header> -->
   <router-outlet></router-outlet>
-  <app-footer></app-footer>
+  <!-- <app-footer></app-footer> -->
 </ng-container> 
