login,register,session store login info

--- a/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
+++ b/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
@@ -7,7 +7,10 @@
 		
 		<mat-card  class="innermat-card example-card1" >
 			<mat-card-header>
-			  <mat-card-title>groupId:{{group_uid}}</mat-card-title>
+			  <mat-card-title>groupId:{{group_uid}}
+				<a style ="text-align: right;" href= {{energyurl+item.creationBlockHash}} target="_blank">EWF Detals</a>
+			  </mat-card-title>
+
 			</mat-card-header>
 		  
 			<mat-card-content>
