--- a/apps/drec-angular-ui/src/app/view/login/login.component.html
+++ b/apps/drec-angular-ui/src/app/view/login/login.component.html
@@ -115,6 +115,9 @@
       <div class="p-3 pb-4 mb-2">
         <button type="submit" class="btn-primary btn   btn-block">Login</button>
       </div>
+      
+      <p>Don't have an account?</p>
+      <p>  <a routerLink="/register" style="color: #f2be1a;">Register</a></p>
     </form>
   </mat-card>
 </div>
