--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
@@ -85,7 +85,7 @@
                     </tr>
                 </table>
 
-                <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+                <mat-paginator [pageSize]="pageSize"  aria-label="Select page of users"></mat-paginator>
             <!-- </div> -->
         <!-- </mat-card-content>
         <mat-card-footer></mat-card-footer>
