--- a/apps/drec-angular-ui/src/app/view/register/register.component.html
+++ b/apps/drec-angular-ui/src/app/view/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="bg-solar">
-    
+
 </div>
 
 <div
@@ -11,7 +11,7 @@
 
             <!-- logo -->
             <div class="py-4">
-                <svg xmlns="http://www.w3.org/2000/svg" width="151" height="48" viewBox="0 0 151 48">
+                <svg xmlns="http://www.w3.org/2000/svg" width="151" height="48px" viewBox="0 0 151 48">
                     <path
                         d="M16.7,28.5V26.1a.58.58,0,0,0-.59-.58H13.7a.58.58,0,0,0-.57.58v2.4a.58.58,0,0,0,.58.58h2.41a.59.59,0,0,0,.58-.58"
                         fill="#f2be1a"></path>
