--- a/apps/drec-angular-ui/src/app/nav/header/header.component.scss
+++ b/apps/drec-angular-ui/src/app/nav/header/header.component.scss
@@ -15,6 +15,7 @@ $danger: #f44336;
     left: 0;
     right: 0;
     height: 10px;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
   }
   .spacer {
     flex: 1 1 auto;
