--- a/apps/drec-angular-ui/src/app/nav/footer/footer.component.html
+++ b/apps/drec-angular-ui/src/app/nav/footer/footer.component.html
@@ -1,1 +1,5 @@
-<mat-toolbar class="example-footer">Footer</mat-toolbar>
+<div class="example-footer text-center bg-white"> 
+    <p class="text-dark mb-0">
+      <strong>D-REC</strong> 2022 © All rights reserved.</p>
+   </div>
+   
