--- a/apps/drec-angular-ui/src/app/nav/header/header.component.scss
+++ b/apps/drec-angular-ui/src/app/nav/header/header.component.scss
@@ -15,7 +15,13 @@ $danger: #f44336;
     left: 0;
     right: 0;
     height: 10px;
-    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 3px 0px 33px rgba(0,0,0,0.1);
+    z-index: 2;
+  }
+  .mat-drawer-inner-container
+  {
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+    z-index: 999;
   }
   .spacer {
     flex: 1 1 auto;
