--- a/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
+++ b/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
@@ -2,7 +2,7 @@
   <mat-sidenav #sidenav mode="side" opened class="example-sidenav">
     <!-- {{options.value.fixed ? 'Fixed' : 'Non-fixed'}} Sidenav -->
 
-    <button mat-button class="menu-button" routerLink="/AllDevices" *ngIf="loginuser.role ==='Admin'">
+    <button mat-button class="menu-button " routerLink="/AllDevices" *ngIf="loginuser.role ==='Admin'">
       <mat-icon>list</mat-icon>
       <span>All Devices</span>
     </button>
@@ -10,7 +10,7 @@
       <mat-icon>list</mat-icon>
       <span>My Devices</span>
     </button>
-    <button mat-button class="menu-button" routerLink="/myreservation" *ngIf="loginuser.role ==='Buyer'">
+    <button mat-button class="menu-button active" routerLink="/myreservation" *ngIf="loginuser.role ==='Buyer'">
       <mat-icon>list</mat-icon>
       <span>My Reservation</span>
     </button>
@@ -41,7 +41,7 @@
       <mat-icon>help</mat-icon>
       <span>Help</span>
     </button>
-    <a mat-button (click)="logout()"><mat-icon>power_settings_new</mat-icon>Logout</a>
+    <button class="menu-button" mat-button (click)="logout()"><mat-icon>power_settings_new</mat-icon>Logout</button>
   </mat-sidenav>
   <mat-sidenav-content>
     <router-outlet></router-outlet>
