--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
@@ -1,11 +1,11 @@
-<div style="padding: 40px 30px 40px 30px;">
-    <!-- <mat-card>
+<div class="body-bg">
+    <mat-card>
         <mat-card-header>
             <mat-card-title>
                 <h1>list</h1>
             </mat-card-title>
         </mat-card-header>
-        <mat-card-content> -->
+        <mat-card-content>
             <mat-form-field>
                 <mat-label>Filter</mat-label>
                 <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
@@ -87,7 +87,7 @@
 
                 <mat-paginator [pageSize]="pageSize"  aria-label="Select page of users"></mat-paginator>
             <!-- </div> -->
-        <!-- </mat-card-content>
+        </mat-card-content>
         <mat-card-footer></mat-card-footer>
-    </mat-card> -->
+    </mat-card>
 </div>
