design fixes are adding

--- a/apps/drec-angular-ui/src/app/view/alldevices/alldevices.component.html
+++ b/apps/drec-angular-ui/src/app/view/alldevices/alldevices.component.html
@@ -52,7 +52,7 @@
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let row; let i=index;">
         <!-- <button>certificate</button> -->
-        <button class="btn btn-info"  
+        <button class="btn-primary btn"  
           target="_blank">Edit</button>
 
       </td>
