--- a/apps/drec-angular-ui/src/styles.scss
+++ b/apps/drec-angular-ui/src/styles.scss
@@ -15,6 +15,7 @@ $danger: #f44336;
 
 
 // Fonts
+$f-12:12px;
 $f-14:14px;
 $f-16:16px;
 
@@ -85,4 +86,37 @@ font-weight: 600;
 .mat-drawer-inner-container
 {
   background-color: $white!important;
+}
+
+
+.mat-mdc-form-field-input-control.mat-mdc-form-field-input-control
+{
+    font-size: $f-12!important;
+}
+.mat-mdc-text-field-wrapper .mat-mdc-form-field-flex .mat-mdc-floating-label
+{
+    font-size: $f-14!important;
+    top: 25px!important;
+}
+
+
+// All tables
+tr.mat-mdc-header-row.mdc-data-table__header-row.cdk-header-row
+{
+    background: $tritary;
+    color: $white;
+    box-shadow: 0px 13px 5px rgba(0,0,0,0.1);
+    th
+    {
+        color: $white;
+    }
+}
+
+.mat-sort-header-arrow
+{
+    color: #fff!important;
+}
+.mat-mdc-table .mdc-data-table__row
+{
+    height: 34px!important;
 }
