table chanbges are added

--- a/apps/drec-angular-ui/src/app/view/login/login.component.scss
+++ b/apps/drec-angular-ui/src/app/view/login/login.component.scss
@@ -142,7 +142,7 @@ $danger: #f44336;
   background-image: url("../../../assets/images/solar-image.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: bottom center;
+  background-position: center center;
   position: absolute;
   top: 0px;
   width: 100%;
