--- a/apps/drec-angular-ui/src/app/view/register/register.component.scss
+++ b/apps/drec-angular-ui/src/app/view/register/register.component.scss
@@ -140,7 +140,7 @@
   background-image: url("../../../assets/images/solar-image.jpg");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: bottom center;
+  background-position: center center;
   position: absolute;
   top: 0px;
   width: 100%;
