sort color is added

--- a/apps/drec-angular-ui/src/styles.scss
+++ b/apps/drec-angular-ui/src/styles.scss
@@ -115,7 +115,7 @@ tr.mat-mdc-header-row.mdc-data-table__header-row.cdk-header-row
 
 .mat-sort-header-arrow
 {
-    color: #fff!important;
+    color: $gray!important;
 }
 .mat-mdc-table .mdc-data-table__row
 {
