add new device reegistration form

--- a/apps/drec-angular-ui/src/app/nav/header/header.component.html
+++ b/apps/drec-angular-ui/src/app/nav/header/header.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar class="example-header custom-header">
-  <!--(click)="sidenav.toggle()"-->
+<mat-toolbar class="example-header custom-header" >
+  <!--(sidenavToggle)="sidenav.toggle()"-->
 
   <mat-toolbar-row>
     <!-- logo -->
