--- a/apps/drec-angular-ui/src/app/view/register/register.component.html
+++ b/apps/drec-angular-ui/src/app/view/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="bg-solar"></div>
 <div class="login-wrapper d-flex align-self-center align-items-center flex-column h-100vh justify-content-center drec-login">
-    <mat-card class="box py-5">
+    <mat-card class="box py-4">
         <mat-card-header>
             <!-- logo -->
             <div class="py-4">
@@ -137,8 +137,13 @@
                 </mat-form-field>
                 <mat-form-field>
                     <!-- <mat-icon matPrefix>person_outline</mat-icon> -->
-                    <input autofocus type="text" matInput placeholder="Organization Type *"
-                        formControlName="organizationType">
+                    <!-- <input autofocus type="text" matInput placeholder="Organization Type *"
+                        formControlName="organizationType"> -->
+                        <mat-select>
+                            <mat-option *ngFor="let food of foods" [value]="food.value"  formControlName="organizationType">
+                              {{food.viewValue}}
+                            </mat-option>
+                          </mat-select>
                     <mat-error class="py-3" *ngIf="checkValidation('organizationType')">
                         {{ fieldRequired }}
                     </mat-error>
@@ -152,24 +157,18 @@
                 </mat-form-field>
                 <mat-form-field>
                     <!-- <mat-icon matPrefix>person_outline</mat-icon> -->
-                    <input autofocus type="text" matInput placeholder="OrgAddress *" formControlName="orgAddress">
+                    <input autofocus type="text" matInput placeholder="OrgAddress" formControlName="orgAddress">
                     <mat-error class="py-3" *ngIf="checkValidation('orgAddress')">
                         {{ fieldRequired }}
                     </mat-error>
                 </mat-form-field>
-                <mat-form-field>
-                    <!-- <mat-icon matPrefix>person_outline</mat-icon> -->
-                    <input autofocus type="text" matInput placeholder="Secret Key *" formControlName="secretKey">
-                    <mat-error class="py-3" *ngIf="checkValidation('secretKey')">
-                        {{ fieldRequired }}
-                    </mat-error>
-                </mat-form-field>
+               
 
                 <mat-form-field class="mb-5">
                     <!-- <mat-icon matPrefix>lock_outline</mat-icon> -->
                     <input type="password" autocomplete="false" matInput placeholder="Password *"
                         formControlName="password">
-                    <mat-hint>Choose a password of at least eight characters, one uppercase letter and one
+                    <mat-hint>Choose a password of at max 6 characters(upper and/or lower case) and one
                         number</mat-hint>
                     <mat-error class="py-3 " *ngIf="checkValidation('password')">
                         {{ getErrorPassword() }}
@@ -180,27 +179,30 @@
                     <!-- <mat-icon matPrefix>lock_outline</mat-icon> -->
                     <input type="password" autocomplete="false" matInput placeholder="confirm Password *"
                         formControlName="confirmPassword">
-                    <mat-hint>Choose a password of at least eight characters, one uppercase letter and one
+                    <mat-hint>Choose a password of at max 6 characters(upper and/or lower case) and one
                         number</mat-hint>
                     <mat-error class="py-3" *ngIf="checkValidation('confirmPassword')">
                         {{ getErrorPassword() }}
                     </mat-error>
                 </mat-form-field>
-                <mat-form-field class="mb-5">
-                    <mat-icon matPrefix>lock_outline</mat-icon>
-                    <input type="password" autocomplete="false" matInput placeholder="confirm Password *"
-                        formControlName="confirmPassword">
-                    <mat-hint>Choose a password of at least eight characters, one uppercase letter and one
-                        number</mat-hint>
-                    <mat-error  class="py-3" *ngIf="checkValidation('confirmPassword')">
-                        {{ getErrorPassword() }}
+                <mat-form-field>
+                    <!-- <mat-icon matPrefix>person_outline</mat-icon> -->
+                    <input autofocus type="text" matInput placeholder="Secret Key *" formControlName="secretKey">
+                    <mat-hint>Secret key should be of 6 characters length and consist of minimum one upper case and minimum one digit, and combination should include only A-Z upper case and 0-9 numbers. please enter valid secret key</mat-hint>
+                    <mat-error class="py-3" *ngIf="checkValidation('secretKey')">
+                        {{ getErrorsecretKey() }}
                     </mat-error>
                 </mat-form-field>
             </mat-card-content>
         </div>
-            <div class="p-3 pb-4 mb-2">
+            <div class="p-3 mb-2">
                 <button [disabled]="registerForm.invalid" class="btn-primary btn btn-block">Submit</button>
             </div>
+            
+            <div class="d-flex justify-content-between mb-2 px-3">
+                <p class="mb-0 pb-0">have an account?</p>
+                <p class="mb-0 pb-0"><a routerLink="/login" class="text-warning">Login</a></p>
+              </div>
         </form>
     </mat-card>
 </div>
