--- a/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
+++ b/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
@@ -2,23 +2,27 @@
   <mat-sidenav #sidenav mode="side" opened class="example-sidenav">
     <!-- {{options.value.fixed ? 'Fixed' : 'Non-fixed'}} Sidenav -->
 
-    <button mat-button class="menu-button " routerLink="/AllDevices" *ngIf="loginuser.role ==='Admin'">
+    <button mat-button class="menu-button " routerLinkActive="active"routerLink="/AllDevices" *ngIf="loginuser.role ==='Admin'">
       <mat-icon>list</mat-icon>
       <span>All Devices</span>
     </button>
-    <button mat-button class="menu-button" routerLink="/AllDevices" *ngIf="loginuser.role ==='OrganizationAdmin'">
+    <button mat-button class="menu-button" routerLinkActive="active"routerLink="/AllDevices" *ngIf="loginuser.role ==='OrganizationAdmin'">
       <mat-icon>list</mat-icon>
       <span>My Devices</span>
+    </button>
+    <button mat-button class="menu-button"  routerLinkActive="active" routerLink="/adddevice" *ngIf="loginuser.role ==='OrganizationAdmin'">
+      <mat-icon>list</mat-icon>
+      <span>Add Devices</span>
     </button>
     <button mat-button class="menu-button active" routerLink="/myreservation" *ngIf="loginuser.role ==='Buyer'">
       <mat-icon>list</mat-icon>
       <span>My Reservation</span>
     </button>
-    <button mat-button class="menu-button" routerLink="/myreservation" *ngIf="loginuser.role ==='Buyer'">
+    <button mat-button class="menu-button" routerLinkActive="active"routerLink="/myreservation" *ngIf="loginuser.role ==='Buyer'">
       <mat-icon>add_circle</mat-icon>
       <span>Add Reservation</span>
     </button>
-    <button mat-button class="menu-button" routerLink="/myreservation" *ngIf="loginuser.role ==='Buyer'">
+    <button mat-button class="menu-button"  routerLinkActive="active"*ngIf="loginuser.role ==='Buyer'">
       <mat-icon>account_circle</mat-icon>
       <span>Account</span>
     </button>
@@ -36,11 +40,11 @@
     </button>-->
 
     <mat-divider></mat-divider>
-
+    <!-- 
     <button mat-button class="menu-button">
       <mat-icon>help</mat-icon>
       <span>Help</span>
-    </button>
+    </button> -->
     <button class="menu-button" mat-button (click)="logout()"><mat-icon>power_settings_new</mat-icon>Logout</button>
   </mat-sidenav>
   <mat-sidenav-content>
